--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>coming soon !!!</title>
-	<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-	<style>
-		body {
-			font-family: 'Quicksand', sans-serif;
-		}
-	</style>
-</head>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<script src="lib/jquery-2.1.3.min.js"></script>
 
-<body>
-	<script src="lib/jquery-2.1.3.min.js"></script>
-	<script src="lib/paper-full.js"></script>
-Hi !!!
-</body>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<script type="text/javascript">
+			var $ = window.$;
+
+			//Fill in the background
+
+			var public_key = 'v0yJoRRXKYcrpLdjzDqZ';
+			function drawData()
+			{
+				$.ajax({
+					url: 'https://data.sparkfun.com/output/' + public_key + '.json',
+					data: {page: 1},
+					dataType: 'jsonp',
+				}).done(
+					function(results)
+					{
+						//console.log("Got " + results.length + " results");
+						//console.log(results);
+						console.log("results");
+						google.charts.load('current', {'packages':['corechart']});
+			     	google.charts.setOnLoadCallback(drawChart);
+
+						filldata = [['Time', 'Temprature']];
+						console.log(filldata);
+
+						function drawChart() {
+							$.each(results,function(index, data){
+								filldata.push([new Date(data.timestamp).getMinutes().toString(), parseInt(data.temperature)]);
+								//console.log(filldata);
+							});
+			        var data = google.visualization.arrayToDataTable(filldata);
+
+			        var options = {
+			          title: 'Company Performance',
+			          curveType: 'function',
+			          legend: { position: 'bottom' }
+			        };
+
+			        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+			        chart.draw(data, options);
+						}
+						window.setTimeout(drawData, 30000);
+					}
+				);
+			}
+			drawData();
+		</script>
+	</head>
+	<body>
+
+		<div id="curve_chart" style="width: 900px; height: 500px"></div>
+	</body>
 </html>
