--- a/google_graphs.html
+++ b/google_graphs.html
@@ -29,9 +29,9 @@
 			        var data = google.visualization.arrayToDataTable(filldata);
 
 			        var options = {
-			          title: 'Company Performance',
+			          title: 'Temperature',
 			          curveType: 'function',
-			          legend: { position: 'bottom' }
+			          legend: { position: 'right' }
 			        };
 
 			        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
